--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy on Push to Main
+name: Deploy on Push to Master
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
