--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
+        "crypto-hash": "^3.1.0",
         "gh-pages": "^6.2.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
