--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
+        "assert": "^2.1.0",
+        "buffer": "^6.0.3",
         "crypto-hash": "^3.1.0",
         "dompurify": "^3.2.4",
         "gh-pages": "^6.2.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-html-parser": "^2.0.2",
         "react-router-dom": "^7.1.1",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.0"
